<resources>
    <string name="app_name">Android Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alt_app_name">Rent-a-Boat</string>
    <string name="login">Login</string>
    <string name="rent_a_boat">Rent-A-Boat</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="feed">Feed</string>
    <string name="orders">Orders</string>
    <string name="canoe">Canoe</string>
    <string name="tenerife">Tenerife</string>
    <string name="_45_eur">45 EUR</string>
    <string name="sail_boat">Sail Boat</string>
    <string name="_99_eur">99 EUR</string>
    <string name="costa_brava">Costa Brava</string>
    <string name="kayak">Kayak</string>
    <string name="mallorca">Mallorca</string>
    <string name="_120_eur">120 EUR</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="_100_eur">100 EUR</string>
    <string name="rent_now">Rent now!</string>
</resources>