<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoatFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="202dp"
        android:layout_height="173dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="152dp"
        android:tint="@color/colorAccent"
        android:tintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_speed_boat_blue" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/name"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin_textView"
        android:layout_marginLeft="@dimen/standard_margin_textView"
        android:layout_marginTop="@dimen/standard_margin_textView"
        android:text="@string/location"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin_textView"
        android:layout_marginLeft="@dimen/standard_margin_textView"
        android:layout_marginTop="@dimen/standard_margin_textView"
        android:text="@string/_100_eur"
        android:textColor="@color/customTextColor"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

    <Button
        android:id="@+id/btnBoat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rent_now"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"
        android:layout_marginLeft="@dimen/standard_margin_textView"
        android:layout_marginRight="@dimen/standard_margin_textView"
        android:layout_marginBottom="@dimen/standard_margin_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>